Progress with tying it up with Truffle basic classes like Context and Language, running into build issues